# serializer version: 1
# name: test_entities[button.fujitsu_ac_economy_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.fujitsu_ac_economy_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Economy mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Economy mode',
    'platform': 'fujitsu_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'economy',
    'unique_id': '01JTEST0000000000000000001_economy',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.fujitsu_ac_economy_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fujitsu AC Economy mode',
    }),
    'context': <ANY>,
    'entity_id': 'button.fujitsu_ac_economy_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.fujitsu_ac_move_horizontal_louvre-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.fujitsu_ac_move_horizontal_louvre',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Move horizontal louvre',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Move horizontal louvre',
    'platform': 'fujitsu_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'step_horizontal_louvre',
    'unique_id': '01JTEST0000000000000000001_step_horizontal_louvre',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.fujitsu_ac_move_horizontal_louvre-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fujitsu AC Move horizontal louvre',
    }),
    'context': <ANY>,
    'entity_id': 'button.fujitsu_ac_move_horizontal_louvre',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.fujitsu_ac_move_vertical_louvre-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.fujitsu_ac_move_vertical_louvre',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Move vertical louvre',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Move vertical louvre',
    'platform': 'fujitsu_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'step_vertical_louvre',
    'unique_id': '01JTEST0000000000000000001_step_vertical_louvre',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.fujitsu_ac_move_vertical_louvre-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fujitsu AC Move vertical louvre',
    }),
    'context': <ANY>,
    'entity_id': 'button.fujitsu_ac_move_vertical_louvre',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.fujitsu_ac_powerful_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.fujitsu_ac_powerful_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Powerful mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Powerful mode',
    'platform': 'fujitsu_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'powerful',
    'unique_id': '01JTEST0000000000000000001_powerful',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.fujitsu_ac_powerful_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fujitsu AC Powerful mode',
    }),
    'context': <ANY>,
    'entity_id': 'button.fujitsu_ac_powerful_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
